<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registro">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:background="@android:color/holo_orange_light"
            android:enabled="false" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="99dp"
            android:layout_marginLeft="99dp"
            android:layout_marginTop="19dp"
            android:text="@string/txt_Datos"
            android:textColor="@color/Negro"
            android:textSize="24sp"
            android:textStyle="bold" />



    </RelativeLayout>


    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="62dp"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="15dp"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtnom"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtnom"
            android:textColor="@color/Negro"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editT_nom"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="62dp"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"

        android:background="@drawable/border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_ape"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtapeliido"
            android:textColor="@color/Negro"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editT_ape"
            android:layout_width="250dp"
            android:layout_height="56dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="62dp"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_fecha_nac"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtFechaNac"
            android:textColor="@color/Negro"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editT_fecha_nac"
            android:layout_width="117dp"
            android:layout_height="56dp" />

        <ImageButton
            android:id="@+id/btnFecha"
            android:layout_width="66dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:background="@color/transparent"
            android:src="@drawable/ic_date" /> />
    </LinearLayout>
    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="62dp"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/email"
            android:textColor="@color/Negro"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editT_e"
            android:layout_width="280dp"
            android:layout_height="wrap_content" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="62dp"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_user"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/User"
            android:textColor="@color/Negro"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editT_usuario"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="62dp"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_pass"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pass"
            android:textColor="@color/Negro"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editT_pass"
            android:layout_width="221dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" />




    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="25dp"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Continuar"
            android:textColor="@color/Negro"
            android:background="@android:color/holo_orange_light"/>

    </LinearLayout>

</LinearLayout>