<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil_Fragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Registro">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtPerf"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@android:color/holo_orange_light"
                android:enabled="false" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="223dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="99dp"
                android:layout_marginLeft="99dp"
                android:layout_marginTop="19dp"
                android:text="@string/perfil"
                android:textColor="@color/Negro"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold" />



        </RelativeLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="76dp"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/txt_user"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/User"
                android:textColor="@color/Negro"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/editT_usuario"
                android:layout_width="290dp"
                android:layout_height="35dp"
                android:layout_gravity="center"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="76dp"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtnom"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/txtnom"
                android:textColor="@color/Negro"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/editT_nom"
                android:layout_width="290dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="76dp"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@drawable/border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_ape"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/txtapeliido"
                android:textColor="@color/Negro"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/editT_ape"
                android:layout_width="290dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="76dp"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@drawable/border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_fecha_nac"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/txtFechaNac"
                android:textColor="@color/Negro"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/editT_fecha_nac"
                android:layout_width="290dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:textSize="14sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="76dp"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@drawable/border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/email"
                android:textColor="@color/Negro"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/editT_e"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:textSize="14sp"
                />
        </LinearLayout>
    </LinearLayout>


</FrameLayout>